--- a/src/App.scss
+++ b/src/App.scss
@@ -138,8 +138,8 @@
   position: absolute;
   top: 10px;
   right: 10px;
-}
-.wrap-heart:hover {
   cursor: pointer;
-  color: pink;
 }
+// .wrap-heart:hover {
+//   color: pink;
+// }
