--- a/src/App.scss
+++ b/src/App.scss
@@ -140,6 +140,16 @@
   right: 10px;
   cursor: pointer;
 }
-// .wrap-heart:hover {
-//   color: pink;
-// }
+.wrap-heart:hover {
+  color: pink;
+}
+.wrap-heart-2 {
+  color: pink;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+.wrap-heart-2:hover {
+  color: black;
+}
